# pyxarr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.toml  requirements.txt
.github/workflows/: pytest-cli.yml  python-package.yml
src/pyxarr/: __init__.py  _coord.py  _da.py  _ds.py  _pyxarr.py  dset_from_h5.py  dset_from_hdf5.py  dset_from_xr.py  dset_to_h5.py  xarr.py
src/pyxarr/lib/: __init__.py  coords.py  da.py  ds.py
tests/: conftest.py  dset_from_h5.py  dset_from_hdf5.py  dset_from_xr.py  test_coords.py  test_da.py  test_ds.py  test_dset_from_h5.py  test_dset_from_xr.py  test_from_h5.py  test_from_xr.py  tests_coord64.py  tests_to_h5.py
